--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
+<!DOCTYPE html>
 <html>
-    <head>
+
+<head>
+    <title>Web App - Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Simple Interest Calculator</h1>
+</head>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+<body>
+    <div class="maindiv">
+        <h1>Web App &ndash; Simple Interest Calculator</h1>
 
-        <button onclick="compute()">Compute</button>
-    </body>
+        <div class="formelement">
+            <label for="principal">Amount</label>
+            <input type="number" id="principal">
+        </div>
+        <div class="formelement">
+            <label for="rate">Rate</label>
+            <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25"> <span id="rate_val">10.25%</span>
+        </div>
+        <div class="formelement">
+            <label for="years">No. of Years</label>
+            <select id="years">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
+        </div>
+
+        <div class="formaction">
+        <button onclick="compute()">Compute Interest</button>
+        </div>
+        <span id="result"></span>
+        <footer>
+            &#169; This Calculator belongs to Khemchandra Persadsingh
+        </footer>
+    </div>
+</body>
+
 </html>
